Fixed bug #26355 (flock() doesn't initialize the wouldblock argument)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@144799 c90b9560-bf6c-de11-be94-00142212c4b1